Fixed Page Width
Removed the horizontal scroll bar

--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@ html, body {
   margin: 0;
   text-align: center;
   height: 100%;
+  overflow-x:hidden;
 }
 
 body {
